refactor: simplify RagController and send sources after chunks
- Stream chunks first, then send sources at the end
- Simplify streamResponseReactive into separate streamChunks and sendSources methods
- Remove unnecessary toSourceDocumentDto helper method
- Add JSON escape utility for chunk text

Co-authored-by: Cursor <cursoragent@cursor.com>